--- a/styles.css
+++ b/styles.css
@@ -272,6 +272,7 @@ body{
     cursor: pointer;
     position: relative;
     font-size: 20px;
+    margin-bottom: 20px;
 }
   
 .toggle-answer {
@@ -291,9 +292,13 @@ body{
     display: none;
     margin-top: 10px; 
 }
-  
+
+.see-all-btn{
+    margin-top: 65px;
+    font-size: 20px;
+}
+
 .see-all-btn a {
-    
     text-decoration: none;
     color: #048fc4;
     font-weight: 900;
@@ -366,7 +371,6 @@ body {
   position: absolute;
   top: 10px;
   right: 10px;
-  background-color: #007BFF;
   color: #fff;
   padding: 10px 15px;
   border: none;
@@ -374,10 +378,47 @@ body {
 }
 
 .line {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  border-bottom: 1px solid #ccc;
-  transition: height 0.3s;
+    border-bottom: 1px solid #ccc;
+    transition: height 0.3s;
+    margin-top: 20px;
 }
+
+footer {
+    background-color: #333;
+    color: white;
+    padding: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.left-side {
+    display: flex;
+    align-items: center;
+}
+
+.left-side img {
+    width: 50px; /* Adjust the width as needed */
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.right-side a {
+    margin-right: 10px;
+}
+
+.message-button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.message-button:hover {
+    background-color: #45a049;
+}
+
+
