--- a/styles.css
+++ b/styles.css
@@ -383,42 +383,124 @@ body {
     margin-top: 20px;
 }
 
+
+
 footer {
-    background-color: #333;
+    background-color: #1a1e1f;
     color: white;
-    padding: 90px;
+    padding: 30px;
     display: flex;
+    flex-wrap: wrap; 
     justify-content: space-between;
     align-items: center;
 }
 
 .left-side {
     display: flex;
-    align-items: center;
+    align-items: left;
+    flex-direction: column;
+    margin-left: 160px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-size: smaller;
+    gap: 20px;
+
 }
 
 .left-side img {
-    width: 50px; /* Adjust the width as needed */
-    margin-right: 10px;
+    width: 90px;
     cursor: pointer;
 }
 
+.left-side .footer-text {
+    margin-left: 20px;
+
+}
+
+.right-side {
+    margin-top: 10px; 
+    align-items: right;
+    flex-direction: column;
+    gap: 20px;
+    margin-right: 150px;
+}
+
 .right-side a {
-    margin-right: 10px;
+    margin-right: 5px;
+}
+
+.right-side img{
+    height: 39px;
+    width: 39px;
 }
 
 .message-button {
-    background-color: #4CAF50;
+    background-color: #00aef3;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 30px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-size: 15px;
+    align-items: bottom;
 }
 
 .message-button:hover {
-    background-color: #45a049;
+    background-color: #fff;
+    color:#2b2b2b;
+    
 }
 
+.terms-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 500px; 
+    margin-bottom: 10px;
+}
 
+.terms-link {
+    cursor: pointer;
+}
+
+#terms-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+#terms-content {
+    background: #f0f0f0;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.terms-text {
+    color: #333;
+}
+
+@media only screen and (max-width: 768px) {
+    footer {
+        padding: 20px;
+    }
+
+    .left-side {
+        flex-basis: 100%;
+        justify-content: center;
+        margin-bottom: 10px;
+        flex-direction: column;
+    }
+
+    .right-side {
+        flex-basis: 100%;
+        justify-content: center;
+    }
+}
