--- a/styles.css
+++ b/styles.css
@@ -319,14 +319,9 @@ body{
     transition: height 0.3s; 
 }
 
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
 
 .faq-section {
-  max-width: 800px;
+  max-width: 850px;
   margin: auto;
   padding: 80px 20px 20px;
 }
@@ -338,7 +333,7 @@ body {
 }
 
 .faq-item {
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .question {
@@ -358,9 +353,6 @@ body {
   transition: transform 0.3s;
 }
 
-.toggle-answer.active {
-  transform: rotate(180deg);
-}
 
 .answer {
   display: none;
@@ -378,9 +370,10 @@ body {
 }
 
 .line {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #2b2b2b;
     transition: height 0.3s;
-    margin-top: 20px;
+    margin-top: 70px;
+    margin-bottom: 50px;
 }
 
 
@@ -423,6 +416,7 @@ footer {
     flex-direction: column;
     gap: 20px;
     margin-right: 150px;
+    
 }
 
 .right-side a {
@@ -430,20 +424,25 @@ footer {
 }
 
 .right-side img{
-    height: 39px;
-    width: 39px;
+    height: 35px;
+    width: 35px;
+    margin-right: 2px;
+}
+.social-links {
+    margin-left: 60px;
 }
 
 .message-button {
     background-color: #00aef3;
     color: white;
-    padding: 10px 30px;
+    padding: 7px 30px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
     font-size: 15px;
-    align-items: bottom;
+    margin-top: 35px;
+    margin-right: 20px;
 }
 
 .message-button:hover {
